Fix scaling and ensure links open in new tabs
Needed to increase root font size because text was too small. Also set
form control font-size to inherit.

added attribute to working anchor tags to ensure my page remained open
when link is clicked.

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 :root {
 	--rapidcolor: rgb(219 124 213);
   --rapidcolorlight: rgb(207, 180, 205);
+  font-size: 30px;
 }
 
 body {
@@ -91,6 +92,7 @@ label {
 
 input, button {
   font-family: inherit;
+  font-size: inherit;
   background-color: var(--rapidcolorlight);
 }
 
